[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "faker>=36.1.1",
    "fastapi>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "sqlalchemy>=2.0.38",
]

[tool.pytest.ini_options]
pythonpath = [".", "./blog_api"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
